--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -228,17 +228,17 @@ data-ad-slot="5275186684">
   <h2>Ổn-định cuộc-sống và làm-giàu một cách chắc-chắn</h2>
 <!--  <div class="flright"><amp-img alt="Tự-do Tài-chính" src="/images/freedom1.jpg" width="282" height="172" layout="responsive"></amp-img></div>
 -->
-  <p>Mọi-người đều cần và có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, vì lúc đó có muốn làm cũng không có đủ sức mà làm.
-  <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.
-  <br style="clear:both"><a href="../y-kien/su-giau-co">Có nhiều cách để trở-nên giàu-có</a>, nhưng đối-với <strong>đa-số</strong> người-thường trong xã-hội thì <strong>chỉ có một cách</strong> để trở-nên giàu-có là <a href="chi-tieu">chi-tiêu ít hơn số-tiền-kiếm-được</a> và tích-luỹ từ-từ.
+  <p>Mọi-người đều có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, vì lúc đó có muốn làm cũng không có đủ sức mà làm. Người xưa có câu "Miệng ăn, núi lở", số tiền để ngồi không ăn-xài suốt 30 năm lớn như một núi tiền. Giả sử vào năm 25 tuổi bạn tiêu mười triệu đồng mỗi tháng. Với mức trượt giá khoảng 7%/ năm, 35 năm sau, bạn phải có 25-30 tỉ đồng khi về hưu để đủ sống đến cuối đời. Ba chục tỉ đồng thật-sự là một núi tiền. Làm thế nào để có núi tiền đó đúng vào năm 60 tuổi?
+  <br>Ba chục tỉ đồng có phải là giàu không? Chúng-ta cần hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.
+  <br style="clear:both"><a href="../y-kien/su-giau-co">Có nhiều cách để trở-nên giàu-có</a>, nhưng đối-với <strong>đa-số</strong> người-thường trong xã-hội thì <strong>chỉ có một cách</strong> để trở-nên giàu-có là <a href="chi-tieu">chi-tiêu ít hơn số-tiền-kiếm-được</a> và đầu-tư tích-luỹ từ-từ.
   <br>Đa-số người-thường trong xã-hội kiếm-tiền bằng cách bán-sức-lao-động (chân-tay hay trí-óc). Một số ít người biết cách-quản-lý-đồng-tiền, làm cho nó sinh-lợi nhanh thì làm chủ.
   <br>Tuỳ-theo tài-quản-lý của người-chủ, số-tiền tối-đa người đó có thể quản-lý để sinh-lợi rất khác nhau, số-tiền lớn quá mức đó sẽ không được sinh-lợi tốt, thậm chí có thể bị lỗ.
   <br>Ví-dụ: một người-chủ-tiệm-tạp-hoá quản-lý được một tiệm với số vốn một trăm triệu đồng, nếu giao cho người đó một tỷ đồng, người đó không-thể quản-lý tốt mười tiệm-tạp-hoá, sẽ làm thất-thoát và thua-lỗ.
   <br>Ví-dụ khác: một giám-đốc quản-lý hiệu-quả số vốn mười tỉ đồng, nhưng khi được giao một trăm tỷ đồng sẽ đem đầu-tư không đúng chỗ gây thua-lỗ.
-  <br>Một trường-hợp có thật là <a href="http://cafef.vn/toan-he-thong-the-kafe-da-dong-cua-sau-nua-nam-dao-chi-anh-dut-ao-ra-di-cai-ket-buon-cua-mot-start-up-trieu-do-20170419112201572.chn" target='_blank'>The KAfe</a>.
-  <br>Không-thể quản-lý một số-tiền quá lớn nhưng mỗi-người đều cần phải có <a href="tich-luy">một khối-tài-sản ít nhất hàng chục tỉ đồng lúc về-hưu</a>. Làm-thế-nào để cho khối-tài-sản đó sinh-lợi? Đó là đầu-tư. Rất nhiều người cho rằng đầu-tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu-tư bắt-đầu từ việc <a href="dung-so-dau-tu">đơn-giản nhất</a> là gửi tiết-kiệm ở ngân-hàng và tiếp-theo là những việc <a href="cach-dau-tu">hiện-đại hơn</a>.</p>
+  <br>Một trường-hợp thua-lỗ đã xảy-ra là <a href="http://cafef.vn/toan-he-thong-the-kafe-da-dong-cua-sau-nua-nam-dao-chi-anh-dut-ao-ra-di-cai-ket-buon-cua-mot-start-up-trieu-do-20170419112201572.chn" target='_blank'>The KAfe</a>.
+  <br>Không-thể quản-lý một số-tiền quá lớn nhưng mỗi-người đều cần phải có <a href="tich-luy">một khối-tài-sản hàng chục tỉ đồng lúc về-hưu</a>. Làm-thế-nào để cho khối-tài-sản đó sinh-lợi? Đó là đầu-tư. Rất nhiều người cho rằng đầu-tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu-tư bắt-đầu từ việc <a href="dung-so-dau-tu">đơn-giản nhất</a> là gửi tiết-kiệm ở ngân-hàng và tiếp-theo là những việc <a href="cach-dau-tu">hiện-đại hơn</a>.</p>
   <p>Bên-cạnh việc tích-luỹ làm gia-tăng tài-sản mỗi-người còn phải <a href="cac-loai-bao-hiem/">bảo-vệ</a> tài-sản đó trước những việc bất-ngờ không-mong-muốn.</p>
-  <p>Tất-cả những việc trên có-thể được đưa vào một <a href="ke-hoach-tai-chinh/">kế-hoạch</a> rõ-ràng nhờ phần-mềm-máy-tính.</p>
+  <p>Để tích-luỹ tài sải vài chục tỉ đồng trong một thời-gian dài vài chục năm mỗi người cần một lộ-trình rõ-ràng, <a href="ke-hoach-tai-chinh/">phần-mềm-máy-tính KHTC</a> sẽ giúp bạn vạch-ra và điều-chỉnh lộ-trình theo những biến-động trong suốt thời-gian dài đó.</p>
 
   <h2>Các bài khác trong cùng mục này</h2>
   <ul>
@@ -279,35 +279,6 @@ data-ad-slot="5275186684">
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
-
-<amp-analytics>
-  <script type="application/json">
-    {
-      "requests": {
-        "pageview": "https://c.statcounter.com/12598906/0/9a8e736a/1/"
-      },
-      "triggers": {
-        "trackPageview": {
-          "on": "visible",
-          "request": "pageview"
-        }
-      }
-    }
-  </script>
-</amp-analytics>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 
 </main>
 </body>
