--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -238,7 +238,7 @@ data-ad-slot="5275186684">
   <br>Một trường-hợp thua-lỗ đã xảy-ra là <a href="http://cafef.vn/toan-he-thong-the-kafe-da-dong-cua-sau-nua-nam-dao-chi-anh-dut-ao-ra-di-cai-ket-buon-cua-mot-start-up-trieu-do-20170419112201572.chn" target='_blank'>The KAfe</a>.
   <br>Không-thể quản-lý một số-tiền quá lớn nhưng mỗi-người đều cần phải có <a href="tich-luy">một khối-tài-sản hàng chục tỉ đồng lúc về-hưu</a>. Làm-thế-nào để cho khối-tài-sản đó sinh-lợi? Đó là đầu-tư. Rất nhiều người cho rằng đầu-tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu-tư bắt-đầu từ việc <a href="dung-so-dau-tu">đơn-giản nhất</a> là gửi tiết-kiệm ở ngân-hàng và tiếp-theo là những việc <a href="cach-dau-tu">hiện-đại hơn</a>.</p>
   <p>Bên-cạnh việc tích-luỹ làm gia-tăng tài-sản mỗi-người còn phải <a href="cac-loai-bao-hiem/">bảo-vệ</a> tài-sản đó trước những việc bất-ngờ không-mong-muốn.</p>
-  <p>Để tích-luỹ tài sải vài chục tỉ đồng trong một thời-gian dài vài chục năm mỗi người cần một lộ-trình rõ-ràng, <a href="ke-hoach-tai-chinh/">phần-mềm-máy-tính KHTC</a> sẽ giúp bạn vạch-ra và điều-chỉnh lộ-trình theo những biến-động trong suốt thời-gian dài đó.</p>
+  <p>Để tích-luỹ tài-sản vài chục tỉ đồng trong một thời-gian dài vài chục năm trong khi tích-luỹ mua nhà, cho con… mỗi người cần một lộ-trình rõ-ràng, <a href="ke-hoach-tai-chinh/">phần-mềm-máy-tính KHTC</a> sẽ giúp bạn vạch-ra và điều-chỉnh lộ-trình theo những biến-động trong suốt thời-gian dài đó.</p>
 
   <h2>Các bài khác trong cùng mục này</h2>
   <ul>
