--- a/kinh-nghiem/may-tinh/googlemaps.html
+++ b/kinh-nghiem/may-tinh/googlemaps.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -202,10 +206,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3>Cần đánh dấu địa điểm chính xác</h3>
   <p>Tuy nhiên, nếu người dùng chỉ có địa chỉ và không biết chính xác vị trí điểm B thì rất dễ đi đến sai chỗ vì địa chỉ ở Việt Nam rất rối. Trường hợp người ta đặt xe Grab đến điểm B theo địa chỉ có thể dẫn đến những tình huống phiền phức: người đặt xe và người lái xe Grab không cùng nghĩ giống nhau.</p>
   <p>Cách tốt nhất để tránh bị dẫn đường sai là <strong>đánh dấu địa điểm chính xác</strong> những nơi cần đến trong Google Maps và để Google Maps chuyển địa điểm đó cho Grab. Có nhiều cách để đánh dấu địa điểm chính xác.</p>
-  <div class="flright"><amp-img alt="Màn hình app Google Maps" src="/images/ContactsInMaps.jpg" width="360" height="640" layout="responsive"></amp-img></div>
+  <div class="portimg"><amp-img alt="Màn hình app Google Maps" src="/images/ContactsInMaps.jpg" width="360" height="640" layout="responsive"></amp-img></div>
   <ol>
     <li>Nếu điểm B là một nơi công cộng (trường học, cơ quan, bệnh viện…) và may mắn là địa điểm đã được đánh dấu đúng chỗ trong Google Maps, ta chỉ cần tìm theo tên của nơi đó là có toạ độ.</li>
-    <li>Nếu điểm B là nơi ta thường đến (ví dụ nhà người thân, bạn…) và nhập địa chỉ nơi đó vào Google Contacts rồi thấy tên Contact đó xuất hiện đúng chỗ trong Google Maps thì đây là một trường hợp may mắn nữa. Để thấy những địa điểm như vậy trong Google Maps app, chúng ta chọn <strong>☰</strong> rồi chọn <strong>Your places</strong> sẽ thấy tương tự như hình bên cạnh. Từ đây về sau ta cứ gõ tên người đó trong Google Maps là có được toạ độ.</li>
+    <li>Nếu điểm B là nơi ta thường đến (ví dụ nhà người thân, bạn…) và nhập địa chỉ nơi đó vào Google Contacts rồi thấy tên Contact đó xuất hiện đúng chỗ trong Google Maps thì đây là một trường hợp may mắn nữa. Để thấy những địa điểm như vậy trong Google Maps app, chúng ta chọn <strong>☰</strong> rồi chọn <strong>Your places</strong> sẽ thấy tương tự như hình trên. Từ đây về sau ta cứ gõ tên người đó trong Google Maps là có được toạ độ.</li>
     <li>Nếu điểm B là nơi ta thường đến và nhập địa chỉ nơi đó vào Google Contacts rồi nhưng thấy tên Contact đó xuất hiện không đúng chỗ trong Google Maps thì ta phải đánh dấu nhà đó bằng một <i>label</i> trong Google Maps và dùng label đó để có được toạ độ. Những label đã tạo ra cũng xuất hiện trong <i>Your places</i> trong Google Maps app.</li>
     <li>Nếu ta chưa bao giờ đến điểm B và cảm thấy nơi đó hơi rối thì nên nhờ một người đã biết rõ địa điểm đó gửi cho chúng ta toạ độ chính xác. Người đó chỉ cần chấm vào vị trí đó trong Google Maps (web hoặc app) hoặc chọn từ <i>Your places</i>, rồi chọn Share để gửi một link qua các phương tiện SMS, Hangouts, Messenger, Viber, email… Ta mở link đó bằng Google Maps app là có ngay toạ độ chính xác cần tới. Nhớ đặt label cho toạ độ đó để có thể dùng lại khi cần.
     <br>Chúng ta nên tập thói quen hỏi đường và chỉ đường bằng một link toạ độ như vậy, rất chính xác và tốn ít thời gian mô tả đường đi.
