--- a/kinh-nghiem/may-tinh/pi-app.html
+++ b/kinh-nghiem/may-tinh/pi-app.html
@@ -205,11 +205,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <br><a href="#functions">Các chức-năng của app Pi Network</a>
     <blockquote>
       <a href="#install">Cài app</a>
-      <br><a href="#gia-tri">Tạo tài-khoản</a>
-      <br><a href="#tham-gia">Làm sao để có Pi</a>
-      <br><a href="#pinode">Pi Node</a>
+      <br><a href="#account">Tạo tài-khoản</a>
     </blockquote>
-    <br><a href="#pi">Cách dùng app Pi Network</a>
+    <br><a href="#pi"></a>
   </blockquote>
 
 <p>Bạn dùng app Pi Network trên smartphone để nhận tiền-điện-tử mỗi-ngày. Mỗi-ngày bạn phải mở app để bấm nút bắt-đầu một chu-kỳ tính tiền mới. Chu-kỳ sẽ chấm-dứt sau 24 giờ và bạn cần bấm nút tiếp. Trong chu-kỳ 24 giờ đó, app không làm gì, mọi việc tính tiền-thưởng được làm trong server của Pi Network nên smartphone của bạn không cần mạnh, không cần nhiều bộ-nhớ, không hao pin, không hao lưu-lượng data.</p>
@@ -233,14 +231,14 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Sau khi cài app xong, bạn mở app sẽ thấy màn hình giống như hình sau.</p>
 <div class="portimg"><amp-img alt="App Pi Network chưa login" src="/images/Pi-app1.jpg" width="1080" height="2232" layout="responsive" /></div>
 
-  <h3>Tạo tài-khoản Pi</h3>
+  <h3 id="account">Tạo tài-khoản Pi</h3>
   <p>Trong màn-hình trên, bạn bắt đầu tạo tài-khoản. Pi Network cần một cách liên-lạc để kiểm-tra sơ rằng bạn là một người, không phải là một phần-mềm tạo hàng-loạt tài-khoản. Bạn có-thể chọn dùng tài-khoản Facebook hoặc số-điện-thoại-di-động của bạn để liên-lạc với Pi Network. Tôi khuyên bạn dùng số-điện-thoại-di-động, đừng dùng tài-khoản Facebook vì bạn có-thể giữ số-điện-thoại-di-động chắc hơn giữ tài-khoản Facebook. Bạn hãy giữ số-điện-thoại-di-động của bạn thật chắc: đăng-ký số căn-cước-công-dân của bạn công-ty điện-thoại-di-động, thường-xuyên nạp tiền vào tài-khoản hoặc thanh-toán cước đúng-hạn để không bị mất số.
   <br>Vậy bạn hãy bấm vào <b>Continue with phone number</b> để sang màn hình tiếp-theo.</p>
 <div class="portimg"><amp-img alt="App Pi Network nhập số-điện-thoại" src="/images/Pi-app2.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Bạn chọn Vietnam trong danh-sách Country rồi gõ số-điện-thoại-di-động của bạn vào, bạn đừng gõ số 0 đầu-tiên. Bạn hãy xem lại để chắc-chắn rằng số-điện-thoại-di-động đã đúng rồi bấm Submit.
   <br>Dòng chữ bên dưới chữ Submit nhắc rằng bạn cần phải chứng-minh rằng bạn sở hữu số-điện-thoại-di-động trên. Bạn sẽ làm việc-chứng-minh đó sau khi tạo-tài-khoản.</p>
 <div class="portimg"><amp-img alt="App Pi Network chọn quốc-gia" src="/images/Pi-app3.jpg" width="1080" height="2232" layout="responsive" /></div>
-  <p>Sau khi bấm Submit, bạn sẽ tiếp-tục chọn mật-khẩu trong màn-hình tiếp-theo. Bạn hãy chọn một mật-khẩu dài từ tám chữ hoặc số trở lên, trong đó phải có con-số, chữ-thường và chữ-hoa. Bạn gõ mật-khẩu trong hai ô. Trước khi bấm Submit, bạn hãy ghi lại mật-khẩu này để tránh bị quên, cách tốt nhất là ghi trong <a href="protect">file KeePass</a>.</p>
+  <p>Sau khi bấm Submit, bạn sẽ tiếp-tục chọn mật-khẩu trong màn-hình tiếp-theo. Bạn hãy chọn một mật-khẩu dài từ tám chữ-cái hoặc con-số trở lên, trong đó phải có con-số, chữ-thường và chữ-hoa. Bạn gõ mật-khẩu trong hai ô. Trước khi bấm Submit, bạn hãy ghi lại mật-khẩu này để tránh bị quên, cách tốt nhất là ghi trong <a href="protect">file KeePass</a>.</p>
 <div class="portimg"><amp-img alt="App Pi Network đặt mật-khẩu" src="/images/Pi-app4.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Sau khi bấm Submit, bạn sẽ tiếp-tục nhập thêm chi-tiết cho tài-khoản Pi của bạn, gồm có tên lót và tên riêng (không có dấu) trong ô đầu-tiên First Name, họ trong ô thứ hai Last Name. Bạn chú-ý rằng tên người Việt thường có hơn hai chữ nhưng ở đây chỉ có hai ô, Vì-vậy bạn nhập một chữ của họ trong ô Last Name và tất-cả những chữ còn lại trong ô First Name.
   <br>Mặc dù phải gõ tên thật vào app Pi, bạn có-thể giữ cho app Pi không hiện tên thật của bạn cho người khác thấy mà chỉ hiện tên-tài-khoản. Việc này sẽ được làm sau.
