--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -231,8 +235,8 @@ Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <br>Trong đại dịch Covid-19, việc giãn cách xã hội làm cho smartphone rất cần thiết đối với mỗi người. Tuỳ theo khả năng, bạn có thể chọn smartphone giá từ một triệu đồng trở lên để có thể tận dụng được những lợi ích của nó.
 <dl>
 <dt>NÊN ghi thông tin cấp cứu của bạn vào mục <i>Emergency information</i> trong <i>Settings</i></dt>
-<dd><div class="flright"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>
-Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất, có <a href="https://safechat.com/post/2898376295060271735" target='_blank'>đăng ký hiến tạng</a> hay không.
+<dd>
+Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất, có <a href="https://safechat.com/post/2898376295060271735" target='_blank'>đăng ký hiến tạng</a> hay không.<div class="portimg"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>
 <br>Khi bạn bị bất tỉnh nơi công cộng, được người lạ đưa đi cấp cứu, nhân viên y tế có thể đọc được những thông tin cấp cứu đó bằng cách bấm vào chữ Emergency trong màn hình máy đang bị khoá. Với những thông tin đó, việc cấp cứu sẽ nhanh hơn.
 <br>Khi bạn gặp một người đang bất tỉnh, bạn cũng NÊN thử tìm thông tin cấp cứu trong smartphone của người đó và gọi cho người thân của người đó.</dd>
 <dt>KHÔNG NÊN tắt các app đã dùng xong</dt>
