--- a/kinh-nghiem/may-tinh/pi-app.html
+++ b/kinh-nghiem/may-tinh/pi-app.html
@@ -212,7 +212,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <p>Bạn dùng app Pi Network trên smartphone để nhận tiền-điện-tử mỗi-ngày. Mỗi-ngày bạn phải mở app để bấm nút bắt-đầu một chu-kỳ tính tiền mới. Chu-kỳ sẽ chấm-dứt sau 24 giờ và bạn cần bấm nút tiếp. Trong chu-kỳ 24 giờ đó, app không làm gì, mọi việc tính tiền-thưởng được làm trong server của Pi Network nên smartphone của bạn không cần mạnh, không cần nhiều bộ-nhớ, không hao pin, không hao lưu-lượng data.</p>
   <h2 id="roles">Các vai-trò của bạn trong Pi Network</h2>
-  <p>Bạn có-thể đóng từ một đến ba vai-trò trong Pi Network. Với mỗi vai-trò bạn nhận được một khoản tiền-thường trên từng giây trong mỗi chu-kỳ.</p>
+  <p>Bạn có-thể đóng từ một đến ba vai-trò trong Pi Network. Với mỗi vai-trò bạn nhận được một khoản tiền-thưởng trên từng giây trong mỗi chu-kỳ.</p>
   <h3>Pioneer—người-tiên-phong</h3>
   <p>Khi bạn tạo tài-khoản trong Pi Network, bạn trở-thành người-tiên-phong—người đi đầu. Pioneer là những người đi đầu tham-gia mạng-lưới tiền-điện-tử Pi. Pioneer được thưởng tiền-điện-tử Pi mỗi ngày theo một mức-căn-bản. Mức-căn-bản sẽ giảm dần khi số người tham-gia tăng lên. Hiện-nay—Tháng Giêng năm 2023—mức-căn-bản là 0,0139974 π mỗi giờ, tức-là 0,336 π mỗi ngày. Giả-sử vào năm 2025 mỗi π tương-đương 100 USD thì hôm-nay mỗi pioneer được thưởng 33,6 USD mỗi ngày.</p>
   <h3>Contributor—cộng-tác-viên</h3>
@@ -241,8 +241,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <p>Sau khi bấm Submit, bạn sẽ tiếp-tục chọn mật-khẩu trong màn-hình tiếp-theo. Bạn hãy chọn một mật-khẩu dài từ tám chữ-cái hoặc con-số trở lên, trong đó phải có con-số, chữ-thường và chữ-hoa. Bạn gõ mật-khẩu trong hai ô. Trước khi bấm Submit, bạn hãy ghi lại mật-khẩu này để tránh bị quên, cách tốt nhất là ghi trong <a href="protect">file KeePass</a>.</p>
 <div class="portimg"><amp-img alt="App Pi Network đặt mật-khẩu" src="/images/Pi-app4.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Sau khi bấm Submit, bạn sẽ tiếp-tục nhập thêm chi-tiết cho tài-khoản Pi của bạn, gồm có tên lót và tên riêng (không có dấu) trong ô đầu-tiên First Name, họ trong ô thứ hai Last Name. Bạn chú-ý rằng tên người Việt thường có hơn hai chữ nhưng ở đây chỉ có hai ô, Vì-vậy bạn nhập một chữ của họ trong ô Last Name và tất-cả những chữ còn lại trong ô First Name.
-  <br>Mặc dù phải gõ tên thật vào app Pi, bạn có-thể giữ cho app Pi không hiện tên thật của bạn cho người khác thấy mà chỉ hiện tên-tài-khoản. Việc này sẽ được làm sau.
-  <br>Bạn chọn một tên-tài-khoản để gõ vào ô thứ ba Choose user name. Tên-tài-khoản dài từ 4 tới 20 chữ-cái và con-số.
+  <br>Mặc dù phải gõ tên thật vào app Pi, bạn có-thể giữ cho app Pi không hiện tên thật của bạn cho người khác thấy mà chỉ hiện tên-tài-khoản. Việc này sẽ được làm sau.</p>
+<div class="portimg"><amp-img alt="App Pi Network nhập tên" src="/images/Pi-app7.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Bạn chọn một tên-tài-khoản để gõ vào ô thứ ba Choose user name. Tên-tài-khoản dài từ 4 tới 20 chữ-cái và con-số.
   <br>Bạn bấm Submit để tiếp-tục. Bạn có-thể gặp trường-hợp tên-tài-khoản mà bạn vừa chọn đã bị người-khác chọn rồi, khi đó bạn sẽ quay lại màn-hình này để chọn tên-tài-khoản khác. Bạn nên thêm số năm-sinh hoặc một phần số-điện-thoại vào tên-tài-khoản để đỡ bị trùng. Sau khi tên-tài-khoản đã được chấp-nhận, bạn nhớ ghi nó lại cùng với mật-khẩu đã ghi ở trên.
   <br>Màn-hình tiếp-theo là để kiểm-tra thêm một lần nữa rằng bạn là một người, không phải là một phần-mềm. Bạn sẽ phải chọn những ô vuông có chứa hình liên-quan đến đối-tượng được nêu ra. Sau khi đã chọn đúng và bấm Xác minh (bạn có-thể phải xác-minh hai lần), bạn sẽ thấy màn-hình tiếp-theo</p>
 <div class="portimg"><amp-img alt="App Pi Network người-giới-thiệu" src="/images/Pi-app5.jpg" width="1080" height="2232" layout="responsive" /></div>
