--- a/kinh-nghiem/may-tinh/spam-call.html
+++ b/kinh-nghiem/may-tinh/spam-call.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -209,7 +213,7 @@ Chúng ta có mắng chửi hay đề nghị người gọi xoá số thì vẫn
   <h2>Đưa spammer vào đám mây</h2>
   <p>Truecaller là những app để chống những cuộc gọi tiếp thị không mong muốn bằng sự hợp tác trong cộng đồng. App này cho phép gắn thêm thông tin vào mỗi số điện thoại: tên và dấu spam.
   <br>Điều đặc biệt là tất cả thông tin được tập trung lại trong server trong Internet mà không hề làm rối sổ điện thoại cá nhân của người dùng. Khi tôi gắn tên 'An BĐS' cho một số điện thoại rồi thì khi An gọi đến một người khác có dùng app thì tên 'An BĐS' sẽ tự hiện ra (nếu máy điện thoại người bị gọi đang nối mạng, tốt nhất là Wi-Fi hoặc 4G mobile Internet với VoLTE vì mobile Internet 3G có thể bị gián đoạn khi nhận cuộc gọi) và người bị gọi sẽ không trả lời khi thấy chữ BĐS. Nếu một số điện thoại bị đánh dấu là spam bởi 10 người dùng sẽ tự động bị chặn ở tất cả mọi người dùng. Từng người dùng có thể bỏ chặn những spammer cụ thể, ví dụ tôi không chặn số điện thoại của ngân hàng mà tôi có tài khoản mặc dù số đó bị xếp vào spammer.</p>
-  <p>Hãy cài Truecaller vào và bỏ vài giây ghi tên và đánh dấu spam cho những cuộc gọi không mong muốn. Hơn hai năm qua, tôi đã đặt tên cho hàng ngàn số đó với các chữ rất dễ nhận như là 'BĐS', 'Dai Ichi', 'Tín dụng', 'Lừa Đảo Chứng Khoán', 'Hotel'. Nên ghi ngành kinh doanh trong tên để mọi người dễ nhận biết mục đích người gọi, đừng ghi những chữ chung chung như 'Quấy rối', 'Phiền phức', 'Mất lịch sự'.
+<div class="portimg"><amp-img alt="Truecaller screen" src="/images/TruecallerScreen.jpg" width="360" height="640" layout="responsive"></amp-img></div>  <p>Hãy cài Truecaller vào và bỏ vài giây ghi tên và đánh dấu spam cho những cuộc gọi không mong muốn. Hơn hai năm qua, tôi đã đặt tên cho hàng ngàn số đó với các chữ rất dễ nhận như là 'BĐS', 'Dai Ichi', 'Tín dụng', 'Lừa Đảo Chứng Khoán', 'Hotel'. Nên ghi ngành kinh doanh trong tên để mọi người dễ nhận biết mục đích người gọi, đừng ghi những chữ chung chung như 'Quấy rối', 'Phiền phức', 'Mất lịch sự'.
   <br>Truecaller có chỗ để người dùng ghi chú vào từng số điện thoại, chúng ta có thể ghi nhiều chi-tiết hơn vài chữ ngắn ngủi trong tên.
   <br>Đối-với số-điện-thoại di-động, ngoài ngành-kinh-doanh, tôi còn ghi thêm thời-điểm nhận cú-điện-thoại theo dạng hai con-số ghi năm và hai con-số ghi tháng yymm. Nếu sau khi đã bị chặn mà số-điện-thoại còn gọi lại tiếp thì tôi tiếp-tục sửa thời-điểm theo lần cuối bị gọi. Mục-đích của việc ghi thời-điểm đó là để bỏ chặn những số-điện-thoại di-động đã lâu không gọi. Lý-do là sau một thời-gian dài thì số-điện-thoại đó có thể đã được đổi sang chủ khác, và chủ mới không phải là spammer. Ngoài-ra, định-kỳ xoá bớt những số-điện-thoại quá cũ cũng giúp cho Truecaller chạy nhanh hơn.
   <br>Cách xoá những số spammer quá cũ: mở Identifed Contacts list trong Truecaller, lần-lượt chọn từng tên spammer có thời-điểm quá cũ, unblock số-điện-thoại đó để xoá nó khỏi Block list rồi chọn Remove từ menu ⋮ để xoá nó khỏi Identified Contacts list. Trong Identified Contacts list cũng chứa những số-điện-thoại mà bạn đã từng liên-lạc một lần như là số của các shop, shipper, tài-xế xe thuê… bạn cũng nên xoá những số-điện-thoại ít liên-quan đó.
