--- a/kinh-nghiem/may-tinh/pi-app.html
+++ b/kinh-nghiem/may-tinh/pi-app.html
@@ -206,6 +206,11 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <blockquote>
       <a href="#install">Cài app</a>
       <br><a href="#account">Tạo tài-khoản</a>
+      <br><a href="#verify">Xác-minh tài-khoản</a>
+      <br><a href="#ambassador">Làm đại-sứ</a>
+      <br><a href="#contributor">Làm cộng-tác-viên</a>
+      <br><a href="#lockup">Khoá Pi để tăng tiền-thưởng</a>
+      <br><a href="#detail">Xem chi-tiết tốc-độ tiền-thưởng</a>
     </blockquote>
     <br><a href="#pi"></a>
   </blockquote>
@@ -214,7 +219,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h2 id="roles">Các vai-trò của bạn trong Pi Network</h2>
   <p>Bạn có-thể đóng từ một đến ba vai-trò trong Pi Network. Với mỗi vai-trò bạn nhận được một khoản tiền-thưởng trên từng giây trong mỗi chu-kỳ.</p>
   <h3>Pioneer—người-tiên-phong</h3>
-  <p>Khi bạn tạo tài-khoản trong Pi Network, bạn trở-thành người-tiên-phong—người đi đầu. Pioneer là những người đi đầu tham-gia mạng-lưới tiền-điện-tử Pi. Pioneer được thưởng tiền-điện-tử Pi mỗi ngày theo một mức-căn-bản. Mức-căn-bản sẽ giảm dần khi số người tham-gia tăng lên. Hiện-nay—Tháng Giêng năm 2023—mức-căn-bản là 0,0139974 π mỗi giờ, tức-là 0,336 π mỗi ngày. Giả-sử vào năm 2025 mỗi π tương-đương 100 USD thì hôm-nay mỗi pioneer được thưởng 33,6 USD mỗi ngày.</p>
+  <p>Khi bạn tạo tài-khoản trong Pi Network, bạn trở-thành người-tiên-phong—người-đi-đầu. Pioneer là những người đi-đầu tham-gia mạng-lưới tiền-điện-tử Pi khi nó chưa hoàn-thành. Pioneer được thưởng tiền-điện-tử Pi mỗi ngày theo một mức-căn-bản. Mức-căn-bản sẽ giảm dần khi số người tham-gia tăng lên. Hiện-nay—Tháng Giêng năm 2023—mức-căn-bản là 0,0139974 π mỗi giờ, tức-là 0,336 π mỗi ngày. Giả-sử vào năm 2025 mỗi π tương-đương 100 USD thì hôm-nay mỗi pioneer được thưởng 33,6 USD mỗi ngày.</p>
   <h3>Contributor—cộng-tác-viên</h3>
   <p>Bạn cho Pi Network biết một danh-sách những tài-khoản pioneer mà bạn biết người chủ tài-khoản và tin người đó. Danh-sách đó gọi là Security Circle—vòng-tròn-bảo-mật. Những người đó có-thể là người mà bạn mời vào Pi Network, hoặc là người trong danh-bạ của bạn. App Pi Network sẽ cho bạn biết những người nào trong danh-bạ của bạn đang là pioneer.
   <br>Với mỗi pioneer trong vòng-tròn-bảo-mật, bạn được thưởng thêm 20% mức-căn-bản. Bạn nên tạo vòng-tròn-bảo-mật có ít nhất năm pioneer để được thưởng đến mức tối-đa 100% mức-căn-bản, tức là bạn được thưởng đến 0,672 π mỗi ngày.</p>
@@ -230,6 +235,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>Bạn hãy dùng smartphone mở <a href="https://minepi.com/#download" target='_blank'>trang web của Pi Network</a> để cài app.
 <br>Sau khi cài app xong, bạn mở app sẽ thấy màn hình giống như hình sau.</p>
 <div class="portimg"><amp-img alt="App Pi Network chưa login" src="/images/Pi-app1.jpg" width="1080" height="2232" layout="responsive" /></div>
+<p>Nếu bạn đã có tài-khoản Pi thì hãy login vào để bắt-đầu dùng app. Bạn hãy chọn Continue with phone number, chọn Quốc gia, gõ số-điện-thoại của bạn vào rồi bấm GỬI. Tiếp-theo là gõ mật-khẩu rồi bấm GỬI.
+<br>Nếu bạn lỡ quên mật-khẩu thì bấm vào Quên mật khẩu, rồi bấm KHÔI PHỤC TÀI KHOẢN trong màn-hình tiếp-theo.
+<br>Nếu bạn chưa có tài-khoản Pi thì bạn tạo tài-khoản theo hướng dẫn dưới đây.</p>
 
   <h3 id="account">Tạo tài-khoản Pi</h3>
   <p>Trong màn-hình trên, bạn bắt đầu tạo tài-khoản. Pi Network cần một cách liên-lạc để kiểm-tra sơ rằng bạn là một người, không phải là một phần-mềm tạo hàng-loạt tài-khoản. Bạn có-thể chọn dùng tài-khoản Facebook hoặc số-điện-thoại-di-động của bạn để liên-lạc với Pi Network. Tôi khuyên bạn dùng số-điện-thoại-di-động, đừng dùng tài-khoản Facebook vì bạn có-thể giữ số-điện-thoại-di-động chắc hơn giữ tài-khoản Facebook. Bạn hãy giữ số-điện-thoại-di-động của bạn thật chắc: đăng-ký số căn-cước-công-dân của bạn công-ty điện-thoại-di-động, thường-xuyên nạp tiền vào tài-khoản hoặc thanh-toán cước đúng-hạn để không bị mất số.
@@ -243,24 +251,63 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <p>Sau khi bấm Submit, bạn sẽ tiếp-tục nhập thêm chi-tiết cho tài-khoản Pi của bạn, gồm có tên lót và tên riêng (không có dấu) trong ô đầu-tiên First Name, họ trong ô thứ hai Last Name. Bạn chú-ý rằng tên người Việt thường có hơn hai chữ nhưng ở đây chỉ có hai ô, Vì-vậy bạn nhập một chữ của họ trong ô Last Name và tất-cả những chữ còn lại trong ô First Name.
   <br>Mặc dù phải gõ tên thật vào app Pi, bạn có-thể giữ cho app Pi không hiện tên thật của bạn cho người khác thấy mà chỉ hiện tên-tài-khoản. Việc này sẽ được làm sau.</p>
 <div class="portimg"><amp-img alt="App Pi Network nhập tên" src="/images/Pi-app7.jpg" width="1080" height="2232" layout="responsive" /></div>
-  <p>Bạn chọn một tên-tài-khoản để gõ vào ô thứ ba Choose user name. Tên-tài-khoản dài từ 4 tới 20 chữ-cái và con-số.
+  <p>Bạn chọn một tên-tài-khoản để gõ vào ô thứ ba Choose your username. Tên-tài-khoản dài từ 4 tới 20 chữ-cái và con-số.
   <br>Bạn bấm Submit để tiếp-tục. Bạn có-thể gặp trường-hợp tên-tài-khoản mà bạn vừa chọn đã bị người-khác chọn rồi, khi đó bạn sẽ quay lại màn-hình này để chọn tên-tài-khoản khác. Bạn nên thêm số năm-sinh hoặc một phần số-điện-thoại vào tên-tài-khoản để đỡ bị trùng. Sau khi tên-tài-khoản đã được chấp-nhận, bạn nhớ ghi nó lại cùng với mật-khẩu đã ghi ở trên.
   <br>Màn-hình tiếp-theo là để kiểm-tra thêm một lần nữa rằng bạn là một người, không phải là một phần-mềm. Bạn sẽ phải chọn những ô vuông có chứa hình liên-quan đến đối-tượng được nêu ra. Sau khi đã chọn đúng và bấm Xác minh (bạn có-thể phải xác-minh hai lần), bạn sẽ thấy màn-hình tiếp-theo</p>
 <div class="portimg"><amp-img alt="App Pi Network người-giới-thiệu" src="/images/Pi-app5.jpg" width="1080" height="2232" layout="responsive" /></div>
-  <p>Bạn hãy gõ tên-tài-khoản của người giới-thiệu Pi network cho bạn vào ô Invitation code. Nếu bạn chưa có người-giới-thiệu thì hãy gõ tên-tài-khoản của tôi là LEHBOI vào. Nếu bạn đang giới-thiệu người thân/quen thì hãy nhắc họ gõ tên-tài-khoản của bạn vào.
+  <p>Bạn hãy gõ tên-tài-khoản của người giới-thiệu Pi network cho bạn vào ô Invitation code. Nếu bạn chưa có người-giới-thiệu thì hãy gõ tên-tài-khoản của tôi ở cuối bài này vào. Nếu bạn đang giới-thiệu người thân/quen thì hãy nhắc họ gõ tên-tài-khoản của bạn vào.
   <br>Sau khi bấm Submit thì app Pi Network sẽ cho bạn xem lại tên và họ của bạn. Nếu bạn thấy chưa đúng thì hãy bấm Edit để sửa lại (bạn vẫn còn cơ-hội để sửa trong vòng 14 ngày sau khi tạo tài-khoản), nếu đã đúng thì bấm Submit.
-  <br>Sau khi Submit thì tài-khoản Pi của bạn được tạo. Bạn sẽ thấy màn-hình để nhập địa-chỉ email của bạn. Địa-chỉ email được dùng như một cách để lấy lại tài-khoản khi bạn quên mật-khẩu. Bạn hãy gõ địa-chỉ email của bạn vào hai ô rồi bấm Submit.</p>
+  <br>Sau khi Submit thì tài-khoản Pi của bạn được tạo. Bạn sẽ thấy màn-hình để nhập địa-chỉ e-mail của bạn. Địa-chỉ e-mail được dùng như một cách để lấy lại tài-khoản khi bạn quên mật-khẩu. Bạn hãy gõ địa-chỉ e-mail của bạn vào hai ô rồi bấm Submit.</p>
   <p>Màn-hình tiếp-theo hướng-dẫn bạn cách bắt-đầu một chu-kỳ 24 giờ của tài-khoản Pi này và những chức-năng khác của app.
 <div class="portimg"><amp-img alt="App Pi Network chu-kỳ đầu" src="/images/Pi-app6.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Từ bây-giờ bạn mở app Pi Network mỗi ngày để bắt-đầu chu-kỳ nhận tiền-thưởng tiếp-theo.</p>
+  <p>Bạn cần xác-minh tài-khoản để tài-khoản được hợp-lệ và được bảo-vệ.</p>
 
+  <h3 id="verify">Xác-minh tài-khoản</h3>
+  <p>Để xác-minh tài-khoản, bạn chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Hồ sơ trong menu mới hiện ra.</p>
+<div class="portimg"><amp-img alt="Menu App Pi Network" src="/images/Pi-app8.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Trong màn-hình Hồ sơ, bạn kéo đến phần Xác minh tài khoản.</p>
+  <h4>Xác-minh với số-điện-thoại</h4>
+  <p>Bạn cần xác-minh số-điện-thoại của mình để sau này nhận được số Pi đã thưởng cho bạn.</p>
+<div class="portimg"><amp-img alt="App Pi Network: verify" src="/images/Pi-app9.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Bạn hãy bấm vào chữ XÁC MINH bên phải dòng chữ Xác minh với số điện thoại.</p>
+<div class="portimg"><amp-img alt="App Pi Network: verify" src="/images/Pi-app10.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Bạn bấm vào chữ BẮT ĐẦU màu xanh-lá để gửi một tin-nhắn SMS đến số-điện-thoại của Pi Network ở nước ngoài (Mỹ, Anh, Israel…). Phí gửi tin-nhắn SMS này khoảng hai ngàn đồng.</p>
+  <p>Bạn cũng nên xác-minh địa-chỉ e-mail để có-thể lấy lại tài-khoản khi bạn quên mật-khẩu.</p>
+  <p>Cũng trong màn-hình hồ-sơ này, bạn có-thể chọn giấu tên thật đối-với những người cùng nhóm-giới-thiệu bằng cách chọn dòng Ẩn tên thật.</p>
 
+  <h3 id="ambassador">Làm đại-sứ</h3>
+  <p>Bạn hãy mời thêm người quen tham-gia Pi để mỗi-ngày bạn được thưởng nhiều hơn.
+  <br>Cách dễ nhất là mời khi gặp trực-tiếp, chỉ họ cách cài app, tạo tài-khoản như trên, và nhớ nhắc họ dùng tên-tài-khoản của bạn làm mã-giới-thiệu.
+  <br>Bạn có-thể gửi trang web này cho người quen để họ tự cài app, tạo tài-khoản, và cũng nhớ nhắc họ dùng tên-tài-khoản của bạn làm mã-giới-thiệu.</p>
+  <p>Tiền-thưởng của bạn sẽ được cộng thêm trong mỗi giây người mà bạn giới-thiệu trong chu-kỳ. Vì-vậy bạn hãy thường-xuyên xem nhóm-giới-thiệu để thấy những người đang hết chu-kỳ và nhắc họ bắt-đầu chu-kỳ mới. Bạn có-thể nhắc bằng cách nhắn-tin, gọi-điện-thoại.
+  <br>Bạn chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Nhóm giới thiệu trong menu mới hiện ra. Những người không có dấu màu xanh-lá trong màn-hình Nhóm Giới thiệu là đang hết chu-kỳ.</p>
+<div class="portimg"><amp-img alt="App Pi Network: team" src="/images/Pi-app11.jpg" width="1080" height="2232" layout="responsive" /></div>
+
+  <h3 id="contributor">Làm cộng-tác-viên</h3>
+  <p>Sau ba chu-kỳ đầu-tiên, bạn có-thể làm cộng-tác-viên: tạo vòng-tròn-bảo-mật.
+  <br>Bạn chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Các vai trò trong menu mới hiện ra.</p>
+<div class="portimg"><amp-img alt="App Pi Network: roles" src="/images/Pi-app12.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Bạn hãy bấm vào chữ BẮT ĐẦU cạnh chữ Cộng tác viên. Trong màn-hình mới, bạn chọn thêm người giới thiệu, chọn THÊM TỪ NHÓM CỦA BẠN, THÊM TỪ DANH BẠ.</p>  
+<div class="portimg"><amp-img alt="App Pi Network: Contributor" src="/images/Pi-app13.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Bạn hãy thêm ít nhất năm người bạn biết và tin vào vòng-tròn-bảo-mật. Tiền-thưởng của bạn sẽ được tăng gấp đôi vào chu-kỳ kế-tiếp.
   
-  <p>Còn tiếp: Làm các việc của các vai-trò để tăng thêm tiền-thưởng.</p>
+  <h3 id="lockup">Khoá Pi để tăng tiền-thưởng</h3>
+  <p>Việc khoá Pi gần giống như việc gửi tiết-kiệm có kỳ-hạn.
+  <br>Điểm giống nhau giữa hai việc là bạn không dùng được số Pi trong một thời-gian đã chọn và bạn sẽ có nhiều Pi hơn so với khi không khoá.
+  <br>Điểm khác nhau giữa hai việc là cách tính số Pi có thêm đó: khi bạn khoá Pi thì bạn được tăng mức tiền-thưởng mỗi ngày, mức tăng tỷ-lệ với thời-gian khoá, lượng Pi bị khoá, và số chu-kỳ đã qua của tài-khoản của bạn.</p>
+  <p>Để chọn khoá Pi, bạn hãy chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Mainnet trong menu mới hiện ra.</p>
+<div class="portimg"><amp-img alt="App Pi Network: Mainnet" src="/images/Pi-app14.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Trong màn-hình mới, bạn chọn Thiết lập tỷ lệ khoá.</p>
+<div class="portimg"><amp-img alt="App Pi Network: lockup" src="/images/Pi-app15.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Bạn hãy thử chọn các Tỷ lệ khoá và Thời gian khoá để xem mức tăng tốc-độ khai thác. Khi đã chọn được mức tăng vừa ý thì bạn bấm vào CAM KẾT.</p>
 
+  <h3 id="#detail">Xem chi-tiết tốc-độ tiền-thưởng</h3>
+  <p>Để xem chi-tiết tốc-độ tiền-thưởng, bạn hãy chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Khai thác Pi trong menu mới hiện ra.</p>
+<div class="portimg"><amp-img alt="App Pi Network: rate" src="/images/Pi-app16.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Trong màn-hình này, bạn sẽ xem được tốc-độ tiền-thưởng mỗi giờ, bao nhiêu phần-trăm tiền-thưởng thêm từ vòng-tròn-bảo-mật, từ nhóm-giới-thiệu, từ việc khoá Pi. Bạn còn nhận được tiền-thưởng từ việc dùng app Pi Browser và việc chạy <a href="pi-node">Pi Node</a>.</p>
   
-  
-
+<p>Tên tài-khoản của tôi là LEHBOI.</p>
 
 <div class="todiscuss">
 Tài-liệu tham-khảo:
