--- a/kinh-nghiem/may-tinh/pi-app.html
+++ b/kinh-nghiem/may-tinh/pi-app.html
@@ -211,11 +211,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <br><a href="#contributor">Làm cộng-tác-viên</a>
       <br><a href="#lockup">Khoá Pi để tăng tiền-thưởng</a>
       <br><a href="#detail">Xem chi-tiết tốc-độ tiền-thưởng</a>
+      <br><a href="#chat">Trò-chuyện</a>
     </blockquote>
-    <br><a href="#pi"></a>
+    <br><a href="#mainnet">Chuẩn-bị vào Mainnet</a>
   </blockquote>
 
-<p>Bạn dùng app Pi Network trên smartphone để nhận tiền-điện-tử mỗi-ngày. Mỗi-ngày bạn phải mở app để bấm nút bắt-đầu một chu-kỳ tính tiền mới. Chu-kỳ sẽ chấm-dứt sau 24 giờ và bạn cần bấm nút tiếp. Trong chu-kỳ 24 giờ đó, app không làm gì, mọi việc tính tiền-thưởng được làm trong server của Pi Network nên smartphone của bạn không cần mạnh, không cần nhiều bộ-nhớ, không hao pin, không hao lưu-lượng data.</p>
+<p>Bạn dùng app Pi Network trên smartphone để nhận tiền-điện-tử mỗi-ngày. Mỗi-ngày bạn phải mở app để bấm nút bắt-đầu một chu-kỳ tính tiền mới. Chu-kỳ sẽ chấm-dứt sau 24 giờ và bạn cần bấm nút tiếp. Trong chu-kỳ 24 giờ đó, app không làm gì, mọi việc tính tiền-thưởng được làm trong server của <a href="pi-network">Pi Network</a> nên smartphone của bạn không cần mạnh, không cần nhiều bộ-nhớ, ít hao pin, ít hao lưu-lượng data.</p>
   <h2 id="roles">Các vai-trò của bạn trong Pi Network</h2>
   <p>Bạn có-thể đóng từ một đến ba vai-trò trong Pi Network. Với mỗi vai-trò bạn nhận được một khoản tiền-thưởng trên từng giây trong mỗi chu-kỳ.</p>
   <h3>Pioneer—người-tiên-phong</h3>
@@ -240,7 +241,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Nếu bạn chưa có tài-khoản Pi thì bạn tạo tài-khoản theo hướng dẫn dưới đây.</p>
 
   <h3 id="account">Tạo tài-khoản Pi</h3>
-  <p>Trong màn-hình trên, bạn bắt đầu tạo tài-khoản. Pi Network cần một cách liên-lạc để kiểm-tra sơ rằng bạn là một người, không phải là một phần-mềm tạo hàng-loạt tài-khoản. Bạn có-thể chọn dùng tài-khoản Facebook hoặc số-điện-thoại-di-động của bạn để liên-lạc với Pi Network. Tôi khuyên bạn dùng số-điện-thoại-di-động, đừng dùng tài-khoản Facebook vì bạn có-thể giữ số-điện-thoại-di-động chắc hơn giữ tài-khoản Facebook. Bạn hãy giữ số-điện-thoại-di-động của bạn thật chắc: đăng-ký số căn-cước-công-dân của bạn công-ty điện-thoại-di-động, thường-xuyên nạp tiền vào tài-khoản hoặc thanh-toán cước đúng-hạn để không bị mất số.
+  <p>Trong màn-hình trên, bạn bắt đầu tạo tài-khoản. Pi Network cần một cách liên-lạc để kiểm-tra sơ rằng bạn là một người, không phải là một phần-mềm tạo hàng-loạt tài-khoản. Bạn có-thể chọn dùng tài-khoản Facebook hoặc số-điện-thoại-di-động của bạn để liên-lạc với Pi Network. Tôi khuyên bạn dùng số-điện-thoại-di-động, đừng dùng tài-khoản Facebook vì bạn có-thể giữ số-điện-thoại-di-động chắc hơn giữ tài-khoản Facebook. Bạn hãy giữ số-điện-thoại-di-động của bạn thật chắc: đăng-ký số căn-cước-công-dân của bạn với công-ty điện-thoại-di-động, thường-xuyên nạp tiền vào tài-khoản hoặc thanh-toán cước đúng-hạn để không bị mất số.
   <br>Vậy bạn hãy bấm vào <b>Continue with phone number</b> để sang màn hình tiếp-theo.</p>
 <div class="portimg"><amp-img alt="App Pi Network nhập số-điện-thoại" src="/images/Pi-app2.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Bạn chọn Vietnam trong danh-sách Country rồi gõ số-điện-thoại-di-động của bạn vào, bạn đừng gõ số 0 đầu-tiên. Bạn hãy xem lại để chắc-chắn rằng số-điện-thoại-di-động đã đúng rồi bấm Submit.
@@ -262,6 +263,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <div class="portimg"><amp-img alt="App Pi Network chu-kỳ đầu" src="/images/Pi-app6.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Từ bây-giờ bạn mở app Pi Network mỗi ngày để bắt-đầu chu-kỳ nhận tiền-thưởng tiếp-theo.</p>
   <p>Bạn cần xác-minh tài-khoản để tài-khoản được hợp-lệ và được bảo-vệ.</p>
+  <p><b>Chú-ý</b>: tài-khoản Pi này là nơi để ghi tiền-thưởng của bạn. Tiền-thưởng trong tài-khoản này chưa dùng để trao-đổi lấy hàng-hoá, dịch-vụ được. Tiền-thưởng phải được chuyển—migrate vào ví—wallet trong mainnet blockchain của Pi Network rồi mới trao-đổi được. Tiền-thưởng sẽ được chuyển dần vào ví trong nhiều đợt sau khi bạn đã qua bước KYC—xác-thực danh-tính.</p>
 
   <h3 id="verify">Xác-minh tài-khoản</h3>
   <p>Để xác-minh tài-khoản, bạn chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Hồ sơ trong menu mới hiện ra.</p>
@@ -295,19 +297,29 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 id="lockup">Khoá Pi để tăng tiền-thưởng</h3>
   <p>Việc khoá Pi gần giống như việc gửi tiết-kiệm có kỳ-hạn.
   <br>Điểm giống nhau giữa hai việc là bạn không dùng được số Pi trong một thời-gian đã chọn và bạn sẽ có nhiều Pi hơn so với khi không khoá.
-  <br>Điểm khác nhau giữa hai việc là cách tính số Pi có thêm đó: khi bạn khoá Pi thì bạn được tăng mức tiền-thưởng mỗi ngày, mức tăng tỷ-lệ với thời-gian khoá, lượng Pi bị khoá, và số chu-kỳ đã qua của tài-khoản của bạn.</p>
+  <br>Điểm khác nhau giữa hai việc là cách tính số Pi có thêm đó: khi bạn khoá Pi thì bạn được tăng mức tiền-thưởng mỗi ngày, mức tăng tỷ-lệ với thời-gian khoá, lượng Pi bị khoá, và số chu-kỳ đã qua của tài-khoản của bạn. Sau mỗi chu-kỳ thì tiền-thưởng tăng thêm một chút.</p>
   <p>Để chọn khoá Pi, bạn hãy chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Mainnet trong menu mới hiện ra.</p>
 <div class="portimg"><amp-img alt="App Pi Network: Mainnet" src="/images/Pi-app14.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Trong màn-hình mới, bạn chọn Thiết lập tỷ lệ khoá.</p>
 <div class="portimg"><amp-img alt="App Pi Network: lockup" src="/images/Pi-app15.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Bạn hãy thử chọn các Tỷ lệ khoá và Thời gian khoá để xem mức tăng tốc-độ khai thác. Khi đã chọn được mức tăng vừa ý thì bạn bấm vào CAM KẾT.</p>
 
-  <h3 id="#detail">Xem chi-tiết tốc-độ tiền-thưởng</h3>
+  <h3 id="detail">Xem chi-tiết tốc-độ tiền-thưởng</h3>
   <p>Để xem chi-tiết tốc-độ tiền-thưởng, bạn hãy chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Khai thác Pi trong menu mới hiện ra.</p>
 <div class="portimg"><amp-img alt="App Pi Network: rate" src="/images/Pi-app16.jpg" width="1080" height="2232" layout="responsive" /></div>
   <p>Trong màn-hình này, bạn sẽ xem được tốc-độ tiền-thưởng mỗi giờ, bao nhiêu phần-trăm tiền-thưởng thêm từ vòng-tròn-bảo-mật, từ nhóm-giới-thiệu, từ việc khoá Pi. Bạn còn nhận được tiền-thưởng từ việc dùng app Pi Browser và việc chạy <a href="pi-node">Pi Node</a>.</p>
+
+  <h3 id="chat">Trò-chuyện</h3>
+  <p>Trong app Pin Network có nhiều phòng chat cho các nội-dung khác nhau liên-quan đến Pi. Bạn có-thể vào phòng chat để xem, hỏi, đáp các chi-tiết.
+  <br>Hãy nhớ tôn-trọng nội-quy phòng chat.</p>
+
+  <h2 id="mainnet">Chuẩn-bị vào Mainnet</h2>
+  <p>Để được dùng Pi trong mainnet wallet bạn phải trải qua tám bước. Để làm các bước đó, bạn hãy chọn dấu <b>☰</b> ở góc trên bên trái màn-hình, rồi chọn tiếp Mainnet trong menu mới hiện ra. Trong màn hình mới, bạn chọn Danh mục Mainnet.</p>
+<div class="portimg"><amp-img alt="App Pi Network: mainnet" src="/images/Pi-app17.jpg" width="1080" height="2232" layout="responsive" /></div>
+  <p>Trong màn-hình trên, bạn lần-lượt làm các bước từ 1 đến 4, bước nào đã làm xong sẽ đổi sang màu xanh. Đến bước thứ 5 thì bạn phải chờ được mời KYC. Mỗi ngày có hàng chục ngàn người-tiên-phong được chọn một cách ngẫu-nhiên từ hàng chục triệu người để được làm bước 5.</p>
+  <p>Khi bạn được mời làm bước 5 thì app sẽ báo cho bạn biết ngay khi bắt đầu một chu-kỳ mới. Bạn sẽ dùng app <a href="pi-browser">Pi Browser</a> để làm bước KYC này. Bạn cần có căn-cước-công-dân hoặc passport có in hình mặt bạn thật rõ. Căn-cước-công-dân của tôi in hình không rõ nên tôi phải dùng passport.</p>
   
-<p>Tên tài-khoản của tôi là LEHBOI.</p>
+<p>Nếu bạn cần có mã-giới-thiệu khi tạo tài-khoản Pi thì dùng tên-tài-khoản của tôi là LEHBOI.</p>
 
 <div class="todiscuss">
 Tài-liệu tham-khảo:
