--- a/kinh-nghiem/may-tinh/pi-app.html
+++ b/kinh-nghiem/may-tinh/pi-app.html
@@ -213,7 +213,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <br><a href="#detail">Xem chi-tiết tốc-độ tiền-thưởng</a>
       <br><a href="#chat">Trò-chuyện</a>
     </blockquote>
-    <br><a href="#mainnet">Chuẩn-bị vào Mainnet</a>
+    <a href="#mainnet">Chuẩn-bị vào Mainnet</a>
   </blockquote>
 
 <p>Bạn dùng app Pi Network trên smartphone để nhận tiền-điện-tử mỗi-ngày. Mỗi-ngày bạn phải mở app để bấm nút bắt-đầu một chu-kỳ tính tiền mới. Chu-kỳ sẽ chấm-dứt sau 24 giờ và bạn cần bấm nút tiếp. Trong chu-kỳ 24 giờ đó, app không làm gì, mọi việc tính tiền-thưởng được làm trong server của <a href="pi-network">Pi Network</a> nên smartphone của bạn không cần mạnh, không cần nhiều bộ-nhớ, ít hao pin, ít hao lưu-lượng data.</p>
